--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && xcopy build ..\\backend\\build /E /I /Y",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
